# stardust-ai

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: Publish.yml
Docs/: dev_todos.md  development.md
documents/Development/: Todos.md
src/: main.rs  server.rs  state.rs
src/api/: router.rs
src/core/: mod.rs
src/core/queue/: consumer.rs  producer.rs
src/core/websocket/: handler.rs
src/modules/: mod.rs
src/modules/agent/: handler.rs  routes.rs
src/modules/auth/: mod.rs  routes.rs
src/modules/ingestion/: handler.rs  mod.rs  routes.rs  store.rs
src/modules/miscs/: handler.rs
src/views/: chat.html  index.html
